# rust-crates

./: Cargo.toml  README.md  index.html
crates/xcommand/: Cargo.toml
crates/xcommand/examples/: example.rs  long_command.sh
crates/xcommand/src/: builder.rs  child_handle.rs  command.rs  env_var.rs  lib.rs
