[package]
name = "xcommand"
description = "Run a command, forcing pty allocation, and stream the output"
version = "0.1.0"
authors = ["Adam Gaia <git@agaia.dev>"]
edition = "2021"
homepage = "https://github.com/adam-gaia/rust-crates/tree/main/crates/xcommand"
repository = "https://github.com/adam-gaia/rust-crates/tree/main/crates/xcommand"
license = "MIT OR Apache-2.0"


[dependencies]
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
which = "6.0.3"
thiserror = "1.0.64"
nix = { version = "0.29.0", features = ["fs", "process", "term"] }
libc = "0.2.159"
async-stream = "0.3.5"
tokio-stream = { version = "0.1.16", features = ["io-util"] }
tokio-fd = "0.3.0"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
terminal_size = "0.4.0"
winnow = "0.6.20"
s-string = "1.0.0"
eyre = "0.6.12"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
env_logger = "0.11.5"
pretty_assertions = "1.4.1"
